--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -7,11 +8,11 @@
     <body>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Tips</li>
-                <li>Symptoms</li>
-                <li>FAQs</li>
-                <li>Youtube</li>
+                <li><a href="#"">Home</a></li>
+                <li><a href="#tips"></a>Tips</a></li>
+                <li><a href="#syp"></a>Symptoms</a></li>
+                <li><a href="#faq"></a>FAQs</a></li>
+                <li><a href="#yt"></a>Youtube</a></li>
             </ul>
         </nav>
         <header>
@@ -19,6 +20,7 @@
             <h1>Don't worry, we got you!</h1>
         </header>
         <div>
+            <a id=tips></a>
             <header>Tips</header>
             <ul>
                 <li>Wear mask</li>
@@ -26,7 +28,8 @@
             </ul>
         </div>
         <div>
-           <header>Symptoms</header> 
+            <a id=syp></a>
+           <h2>Symptoms</h2> 
            <table>
                <thead>
                     <th>Symptom</th> 
@@ -56,16 +59,21 @@
            </table> 
         </div>
         <div>
-            FAQs
-
-            What is COVID-19?
-            COVID-19 is a disease caused by a virus called SARS-CoV-2. Most people with COVID-19 have mild symptoms, but some people can become severely ill. Although most people with COVID-19 get better within weeks of illness, some people experience post-COVID conditions. Post-COVID conditions are a wide range of new, returning, or ongoing health problems people can experience more than four weeks after first being infected with the virus that causes COVID-19. Older people and those who have certain underlying medical conditions are more likely to get severely ill from COVID-19. Vaccines against COVID-19 are safe and effective.
-            Should I use soap and water or hand sanitizer to protect myself?
-            Handwashing is one of the best ways to protect yourself and your family from getting sick. Wash your hands often with soap and water for at least 20 seconds, especially after blowing your nose, coughing, or sneezing; going to the bathroom; and before eating or preparing food. If soap and water are not readily available, use an alcohol-based hand sanitizer with at least 60% alcohol.
-            What are the symptoms and complications that COVID-19 can cause?
-            People with COVID-19 have reported a wide range of symptoms – from mild symptoms to severe illness. Symptoms may appear 2-14 days after exposure to the virus. If you have fever, cough, or other symptoms, you might have COVID-19.
+            <h2>FAQs</h2>
+            <div class=ques>
+                <h3>What is COVID-19?</h3>
+                COVID-19 is a disease caused by a virus called SARS-CoV-2. Most people with COVID-19 have mild symptoms, but some people can become severely ill. Although most people with COVID-19 get better within weeks of illness, some people experience post-COVID conditions. Post-COVID conditions are a wide range of new, returning, or ongoing health problems people can experience more than four weeks after first being infected with the virus that causes COVID-19. Older people and those who have certain underlying medical conditions are more likely to get severely ill from COVID-19. Vaccines against COVID-19 are safe and effective.
+            </div>
+            <div class=ques>
+                <h3>Should I use soap and water or hand sanitizer to protect myself?</h3>
+                Handwashing is one of the best ways to protect yourself and your family from getting sick. Wash your hands often with soap and water for at least 20 seconds, especially after blowing your nose, coughing, or sneezing; going to the bathroom; and before eating or preparing food. If soap and water are not readily available, use an alcohol-based hand sanitizer with at least 60% alcohol.
+            </div>
+            <div class=ques>
+                <h3>What are the symptoms and complications that COVID-19 can cause?</h3>
+                People with COVID-19 have reported a wide range of symptoms – from mild symptoms to severe illness. Symptoms may appear 2-14 days after exposure to the virus. If you have fever, cough, or other symptoms, you might have COVID-19.
+            </div>
         </div>
-        <div>
+        <div id=yt>
             YouTube
         </div>
         <footer>
