--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -9,10 +8,10 @@
         <nav>
             <ul>
                 <li><a href="#"">Home</a></li>
-                <li><a href="#tips"></a>Tips</a></li>
-                <li><a href="#syp"></a>Symptoms</a></li>
-                <li><a href="#faq"></a>FAQs</a></li>
-                <li><a href="#yt"></a>Youtube</a></li>
+                <li><a href="#tips">Tips</a></li>
+                <li><a href="#syp">Symptoms</a></li>
+                <li><a href="#faq">FAQs</a></li>
+                <li><a href="#yt">Youtube</a></li>
             </ul>
         </nav>
         <header>
@@ -20,7 +19,7 @@
             <h1>Don't worry, we got you!</h1>
         </header>
         <div>
-            <a id=tips></a>
+            <a name="tips"></a>
             <header>Tips</header>
             <ul>
                 <li>Wear mask</li>
@@ -28,7 +27,7 @@
             </ul>
         </div>
         <div>
-            <a id=syp></a>
+            <a name="syp"></a>
            <h2>Symptoms</h2> 
            <table>
                <thead>
@@ -59,6 +58,7 @@
            </table> 
         </div>
         <div>
+            <a name="faq"></a>
             <h2>FAQs</h2>
             <div class=ques>
                 <h3>What is COVID-19?</h3>
@@ -74,6 +74,7 @@
             </div>
         </div>
         <div id=yt>
+            <a name="yt"></a>
             YouTube
         </div>
         <footer>
