--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="index.css">
         <link rel="shortcut icon" href="covidicon.png">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
         <title>Covid Guide</title>
     </head>
     <body>
         <nav>
             <ul>
-                <li><a href="#"">Home</a></li>
+                <li><a href="#">Home</a></li>
                 <li><a href="#tips">Tips</a></li>
                 <li><a href="#syp">Symptoms</a></li>
                 <li><a href="#faq">FAQs</a></li>
@@ -20,7 +24,7 @@
         </header>
         <div>
             <a name="tips"></a>
-            <header>Tips</header>
+            <h2>Tips</h2>
             <ul>
                 <li>Wear mask</li>
                 <li>Use sanitizer</li>
@@ -74,8 +78,8 @@
             </div>
         </div>
         <div id=yt>
-            <a name="yt"></a>
-            YouTube
+            <a name="yt" href="https://www.youtube.com/watch?v=qHksVwOrpbE&list=PL9S6xGsoqIBU2V6AZYGlJwZRAFJ3YDreb">
+            YouTube</a>
         </div>
         <footer>
             &copy;Anish Banerjee
