--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html>
     <head>
         <link rel="stylesheet" href="index.css">
-        <link rel="shortcut icon" href="covidicon.png">
+        <link rel="favicon" href="covidicon.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
-        <title>Covid Guide</title>
+        <link href="https://fonts.googleapis.com/css2?family=Dongle&family=Varela+Round&display=swap" rel="stylesheet"><title>Covid Guide</title>
     </head>
     <body>
+        <header>
+            <h2>Confused about where to get the right information about COVID-19?</h2>
+            <h1>Don't worry, we got you!</h1>
+        </header>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -18,19 +22,15 @@
                 <li><a href="#yt">Youtube</a></li>
             </ul>
         </nav>
-        <header>
-            <h2>Confused about where to get the right information about COVID-19?</h2>
-            <h1>Don't worry, we got you!</h1>
-        </header>
-        <div>
+        <div id=tips>
             <a name="tips"></a>
             <h2>Tips</h2>
             <ul>
-                <li>Wear mask</li>
-                <li>Use sanitizer</li>
+                <li>Wear mask <img src="FFP2 Face mask-amico 1.png"></li>
+                <li>Use sanitizer <img src="Handwashing-amico 1.png"></li>
             </ul>
         </div>
-        <div>
+        <div id="symp">
             <a name="syp"></a>
            <h2>Symptoms</h2> 
            <table>
@@ -79,11 +79,10 @@
         </div>
         <div id=yt>
             <a name="yt" href="https://www.youtube.com/watch?v=qHksVwOrpbE&list=PL9S6xGsoqIBU2V6AZYGlJwZRAFJ3YDreb">
-            YouTube</a>
+            <img src="YT.png"> <br> Watch a Video!</a>
         </div>
         <footer>
-            &copy;Anish Banerjee
+            &copy; Anish Banerjee
         </footer>
     </body>
 </html>
-<!-- HelveticaNeue, sans-serif !important -->
