--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
         </div>
         <div id=yt>
             <a name="yt" href="https://www.youtube.com/watch?v=qHksVwOrpbE&list=PL9S6xGsoqIBU2V6AZYGlJwZRAFJ3YDreb">
-            <img src="YT.png"> <br> Watch a Video!</a>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/qHksVwOrpbE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <br> Watch a Video!</a>
         </div>
         <footer>
             &copy; Anish Banerjee
